--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title></title>
   </head>
   <body>
-
+   <a href="#portfolio">Portfolio</a>
+   <a href="#contact">Contact</a>
+   <a href="#education">Eduction</a>
+   <a href="#projects">Projects</a>
   </body>
 </html>
