--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>My PortFolio</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-   <a href="#portfolio">Portfolio</a>
-   <a href="#contact">Contact</a>
-   <a href="#education">Eduction</a>
-   <a href="#projects">Projects</a>
+    <nav>
+      <ul>
+        <li><a href="index.html">Portfolio</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="education.html">Education</a></li>
+        <li><a href="projects.html">Projects</a></li>
+      </ul>
+    </nav>
+
   </body>
 </html>
