--- a/index.html
+++ b/index.html
@@ -6,14 +6,28 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <nav>
-      <ul>
-        <li><a href="index.html">Portfolio</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="education.html">Education</a></li>
-        <li><a href="projects.html">Projects</a></li>
-      </ul>
-    </nav>
-
+    <header class="header">
+      <div class="top-header">
+        <div id="logo">
+            <img src="C:\Users\lenovo\Pictures\Saved Pictures\logo.jpg" />
+        </div>
+        <nav id="menu">
+          <ul>
+            <li><a href="index.html">Portfolio</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="education.html">Education</a></li>
+            <li><a href="projects.html">Projects</a></li>
+          </ul>
+        </nav>
+      <div>
+        <div id="img-menu">
+          <img src="C:\Users\lenovo\Pictures\Saved Pictures\pic2.jpg"  class="img-size">
+          <div id="content">
+            <p class="caption">"My name is Ritika Jain, currently pursuing BTech in Computer Science And Engineering. I enjoy taking part in Coding Contests. I am a quick learner and have a positive attitude to my work. "
+            </p>
+          </div>
+          
+        </div>
+    </header>
   </body>
 </html>
